<resources>
    <string name="app_name" translatable="false">My coffee</string>

    <!-- bottom navigation strings -->
    <string name="nav_folders">Folders</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_music">Music</string>
    <string name="nav_browser">Browser</string>

    <!-- permission alert dialog strings -->
    <string name="permissions_alert_dialog_title">Permissions</string>
    <string name="permission_alert_dialog_body">MANAGE ALL FILES PERMISSION  needed to access all          files and folders properly, please press Allow button to allow permission</string>
    <string name="decline">Decline</string>
    <string name="allow">Allow</string>

    <!-- folders and files list item details -->
    <string name="folders_files_quantity"> items</string>

    <!-- list item menu -->
    <string name="move_to">Move to</string>
    <string name="copy_to">Copy to</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="hide">Hide</string>
    <string name="select_all">Select all</string>
    <string name="dismiss">Dismiss</string>
    <string name="share">Share</string>
    <string name="info">Info</string>

    <!-- storage toolbar menu  -->
    <string name="create_folder">Create folder</string>
    <string name="app_menu_sort">Sort by</string>
    <string name="sort_A_to_z">Name from A to Z</string>
    <string name="sort_size_small_to_large">Size from small to large</string>
    <string name="sort_date_old_to_new">Date from old to new</string>
    <string name="reverse_sort">Reverse sort</string>
    <string name="app_menu_settings">Setting</string>
</resources>