<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/app_bar_search"-->
<!--        android:icon="@drawable/ic_search_toolbar"-->
<!--        app:showAsAction="always"-->
<!--        android:title="fjkshdfs"-->
<!--        app:actionViewClass="androidx.appcompat.widget.SearchView"/>-->

<!--    <item-->
<!--        android:id="@+id/create_folder"-->
<!--        android:title="@string/create_folder"-->
<!--        android:icon="@drawable/ic_new_folder"/>-->

    <item android:title="@string/app_menu_sort">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_a_to_z"
                    android:title="@string/sort_A_to_z"
                    app:showAsAction="ifRoom"/>

                <item
                    android:id="@+id/sort_small_to_large"
                    android:title="@string/sort_size_small_to_large"/>

                <item
                    android:id="@+id/sort_old_to_new"
                    android:title="@string/sort_date_old_to_new"/>

            </group>

            <item
                android:id="@+id/reverse_sort"
                android:title="@string/reverse_sort"
                android:checkable="true"/>
        </menu>
    </item>

    <item
        android:id="@+id/settings"
        android:title="@string/app_menu_settings"/>
</menu>